k8s/pokemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-game
  namespace: games
spec:
  selector:
    app: pokemon-game
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
