k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbct-game
  namespace: games
spec:
  selector:
    app: dbct-game
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
