k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portal
  namespace: games
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: danglol240.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-portal
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-platformer
  namespace: games
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: games-strip-platformer@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: danglol240.id.vn
      http:
        paths:
          - path: /platformer
            pathType: Prefix
            backend:
              service:
                name: dbct-game
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pokemon
  namespace: games
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: games-strip-pokemon@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: danglol240.id.vn
      http:
        paths:
          - path: /pokemon
            pathType: Prefix
            backend:
              service:
                name: pokemon-game
                port:
                  number: 80
